mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/enum.stderr
error: use of deprecated unit variant `Enum::NotOk`
  --> tests/failing_no_mass_cfg_attr/enum.rs:14:11
   |
14 |     Enum::NotOk;
   |           ^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/enum.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: unused `Enum` that must be used
  --> tests/failing_no_mass_cfg_attr/enum.rs:14:5
   |
14 |     Enum::NotOk;
   |     ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/enum.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
